apps/adguard/adguard-slave/adguard-slave-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-slave
  namespace: adguard
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector:
    matchLabels:
      app: adguard-slave
  template:
    metadata:
      labels:
        app: adguard-slave
    spec:
      affinity:
        podAntiAffinity: 
          preferredDuringSchedulingIgnoredDuringExecution: 
          - weight: 100  
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app 
                  operator: In
                  values:
                  - adguard
              topologyKey: kubernetes.io/hostname
      containers:
      - name: adguard-home
        image: adguard/adguardhome:v0.107.51
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 53
          name: dns
          protocol: UDP
        - containerPort: 53
          name: dnstcp
          protocol: TCP
        - containerPort: 3000
          name: http-initial
          protocol: TCP
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
        - name: adguard-slave-data
          mountPath: /opt/adguardhome/work
        - name: adguard-slave-conf
          mountPath: /opt/adguardhome/conf
        resources:
          requests:
            memory: 150Mi
            cpu: "15m"
          limits:
            memory: 400Mi
        livenessProbe: &probe
          exec:
            command:
            - /bin/sh
            - -c
            - nslookup localhost 127.0.0.1
        readinessProbe: *probe
      - name: adguard-sync
        image: ghcr.io/linuxserver/adguardhome-sync:0.6.11@sha256:67962a0e15bf1a41e4bc0083d93d7e0268ad6431482c337ef49d5f2673c36c71
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: adguard-sync-conf
          mountPath: /config
      volumes:
      - emptyDir: {}
        name: adguard-slave-data
      - emptyDir: {}
        name: adguard-slave-conf
      - name: adguard-sync-conf
        secret:
          secretName: adguard-sync-secret
      - name: adguard-slave-secret
        secret:
          secretName: adguard-slave-secret
