apps/adguard/adguard-slave/adguard-slave-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-slave
  namespace: adguard
spec:
  ingressClassName: nginx
  rules:
  - host: adguard-slave.mgmt.sholdee.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: adguard-slave-http
              port:
                name: http
